[+] Show timer/paused

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "select.h": "c"
+        "*.c": "c",
+        "select.h": "c",
+        "ncurses.h": "c"
     }
 }
